feat: Add H2 database dependency and update datasource properties for testing